# ravenwm

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: sxhkdrc
src/ravenc/: Cargo.toml
src/ravenc/src/: main.rs
src/ravenwm/: Cargo.toml
src/ravenwm/src/: geometry.rs  main.rs
src/ravenwm/src/geometry/: rectangle.rs
src/ravenwm/src/plumage/: color.rs
src/ravenwm_core/: Cargo.toml
src/ravenwm_core/src/: ipc.rs
src/ravenwm_core/src/ipc/: message.rs
