[package]
name = "ravenc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0"
hex_color = "1.0"
ravenwm_core = { path = "../ravenwm_core" }
structopt = { version = "0.3", features = [ "paw" ] }
