[package]
name = "ravenwm_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10"
bincode = "1.3"
hex_color = { version = "1.0", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
